--- a/Source/Wifinian/Views/Styles/CommonControls.xaml
+++ b/Source/Wifinian/Views/Styles/CommonControls.xaml
@@ -274,12 +274,10 @@
 	<SolidColorBrush x:Key="ScrollBar.Background.MouseOver" Color="{StaticResource ScrollBar.Background.MouseOverColor}"/>
 	<SolidColorBrush x:Key="ScrollBar.Background.Pressed" Color="{StaticResource ScrollBar.Background.MouseOverColor}"/>
 	<SolidColorBrush x:Key="ScrollBar.Background.Disabled" Color="{StaticResource ScrollBar.Background.NormalColor}"/>
-
 	<SolidColorBrush x:Key="ScrollBar.Thumb.Static" Color="{StaticResource ScrollBar.Thumb.NormalColor}"/>
 	<SolidColorBrush x:Key="ScrollBar.Thumb.MouseOver" Color="{StaticResource ScrollBar.Thumb.MouseOverColor}"/>
 	<SolidColorBrush x:Key="ScrollBar.Thumb.Pressed" Color="{StaticResource ScrollBar.Thumb.MouseOverColor}"/>
 	<SolidColorBrush x:Key="ScrollBar.Thumb.Disabled" Color="{StaticResource ScrollBar.Thumb.NormalColor}"/>
-
 	<SolidColorBrush x:Key="ScrollBar.Glyph.Static" Color="#BABABA"/>
 	<SolidColorBrush x:Key="ScrollBar.Glyph.MouseOver" Color="#000000"/>
 	<SolidColorBrush x:Key="ScrollBar.Glyph.Pressed" Color="#FFFFFF"/>
@@ -372,7 +370,7 @@
 		<Setter Property="Width" Value="{DynamicResource {x:Static SystemParameters.VerticalScrollBarWidthKey}}"/>
 		<Setter Property="MinWidth" Value="{DynamicResource {x:Static SystemParameters.VerticalScrollBarWidthKey}}"/>
 		<Setter Property="BorderBrush" Value="{StaticResource ScrollBar.Background.Static}"/>
-		<Setter Property="BorderThickness" Value="1,0"/>		
+		<Setter Property="BorderThickness" Value="1,0"/>
 		<Setter Property="Background" Value="{StaticResource ScrollBar.Background.Static}"/>
 		<Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
 		<Setter Property="Template">
@@ -557,6 +555,116 @@
 				</Setter>
 			</Trigger>
 		</Style.Triggers>
+	</Style>
+
+	<!-- Menu separator -->
+	<Style x:Key="MenuSeparatorStyle" TargetType="{x:Type Separator}">
+		<Setter Property="Margin" Value="8,4"/>
+		<Setter Property="Background" Value="{StaticResource Menu.Separator}"/>
+	</Style>
+
+	<!-- Menu item -->
+	<Style x:Key="MenuItemStyle" TargetType="{x:Type ContentControl}">
+		<Setter Property="Focusable" Value="False"/>
+		<Setter Property="Template">
+			<Setter.Value>
+				<ControlTemplate TargetType="{x:Type ContentControl}">
+					<Grid x:Name="body"
+						  Background="{StaticResource Menu.Item.Background.Normal}"
+						  SnapsToDevicePixels="True" UseLayoutRounding="True">
+						<ContentPresenter x:Name="presenter"
+										  Margin="{TemplateBinding Padding}"
+										  Content="{TemplateBinding Content}"
+										  ContentTemplate="{TemplateBinding ContentTemplate}"/>
+					</Grid>
+					<ControlTemplate.Triggers>
+						<Trigger Property="IsMouseOver" Value="True">
+							<Setter Property="Background" TargetName="body" Value="{StaticResource Menu.Item.Background.MouseOver}"/>
+						</Trigger>
+						<Trigger Property="IsKeyboardFocusWithin" Value="True">
+							<Setter Property="Background" TargetName="body" Value="{StaticResource Menu.Item.Background.MouseOver}"/>
+						</Trigger>
+					</ControlTemplate.Triggers>
+				</ControlTemplate>
+			</Setter.Value>
+		</Setter>
+	</Style>
+
+	<!-- Check Button -->
+	<Style x:Key="CheckButtonItemStyle" TargetType="{x:Type ToggleButton}">
+		<Setter Property="FocusVisualStyle" Value="{x:Null}"/>
+		<Setter Property="Background" Value="Transparent"/>
+		<Setter Property="Foreground" Value="{StaticResource App.Foreground}"/>
+		<Setter Property="Template">
+			<Setter.Value>
+				<ControlTemplate TargetType="{x:Type ToggleButton}">
+					<Grid Margin="{TemplateBinding Padding}"
+						  Background="{TemplateBinding Background}"
+						  SnapsToDevicePixels="True" UseLayoutRounding="True">
+						<Grid.ColumnDefinitions>
+							<ColumnDefinition Width="Auto"/>
+							<ColumnDefinition Width="*"/>
+						</Grid.ColumnDefinitions>
+						<Grid Grid.Column="0"
+							  Width="{Binding RelativeSource={RelativeSource Self}, Path=ActualHeight}">
+							<Polyline x:Name="checkMark"
+									  Margin="3"
+									  Points="0,5 4,9 12,0" Stretch="Uniform"
+									  Stroke="{TemplateBinding Foreground}" StrokeThickness="1"
+									  Opacity="0"/>
+						</Grid>
+						<ContentPresenter Grid.Column="1"
+										  Margin="3" HorizontalAlignment="Left" VerticalAlignment="Center"
+										  Focusable="False"/>
+					</Grid>
+					<ControlTemplate.Triggers>
+						<Trigger Property="IsChecked" Value="True">
+							<Setter Property="Opacity" TargetName="checkMark" Value="1"/>
+						</Trigger>
+						<Trigger Property="IsChecked" Value="{x:Null}">
+							<Setter Property="Opacity" TargetName="checkMark" Value="0"/>
+						</Trigger>
+					</ControlTemplate.Triggers>
+				</ControlTemplate>
+			</Setter.Value>
+		</Setter>
+	</Style>
+
+	<!-- Close Button -->
+	<Style x:Key="CloseButtonItemStyle" TargetType="{x:Type ContentControl}">
+		<Setter Property="FocusVisualStyle" Value="{x:Null}"/>
+		<Setter Property="Background" Value="Transparent"/>
+		<Setter Property="Foreground" Value="{StaticResource App.Foreground}"/>
+		<Setter Property="Template">
+			<Setter.Value>
+				<ControlTemplate TargetType="{x:Type ContentControl}">
+					<Grid Margin="{TemplateBinding Padding}"
+						  Background="{TemplateBinding Background}"
+						  SnapsToDevicePixels="True" UseLayoutRounding="True">
+						<Grid.ColumnDefinitions>
+							<ColumnDefinition Width="Auto"/>
+							<ColumnDefinition Width="*"/>
+						</Grid.ColumnDefinitions>
+						<Grid Grid.Column="0"
+							  Width="{Binding RelativeSource={RelativeSource Self}, Path=ActualHeight}">
+							<Path Margin="3"
+								  Stretch="Uniform"
+								  Stroke="{TemplateBinding Foreground}" StrokeThickness="1">
+								<Path.Data>
+									<GeometryGroup>
+										<LineGeometry StartPoint="0,0" EndPoint="1,1"/>
+										<LineGeometry StartPoint="0,1" EndPoint="1,0"/>
+									</GeometryGroup>
+								</Path.Data>
+							</Path>
+						</Grid>
+						<ContentPresenter Grid.Column="1"
+										  Margin="3" HorizontalAlignment="Left" VerticalAlignment="Center"
+										  Focusable="False"/>
+					</Grid>
+				</ControlTemplate>
+			</Setter.Value>
+		</Setter>
 	</Style>
 
 </ResourceDictionary>
